@@ -1,5 +1,6 @@
 version 0.8 - dd-MMM-yyyy
  . Actions: CallFuncND doesn't leak if reused (issue #336)
+ . ParallaxNode: uses world coordinates (issue #373)
 
 version 0.8-beta - 17-Jun-2009
  . Actions: Added BezierBy action (issue #313)
